[package]
name = "usewin"
version = "0.1.0"
authors = ["Richard"]
edition = "2018"

[dependencies]
winapi = { version = "0.3.6", features = ["std", "debugapi", "winnt", "winuser", "reason", "winbase", "securitybaseapi"] }
lightports = { path = "lightports" }
lightports_gui = { path = "lightports-gui" }
config = { version = "0.9", default-features = false, features = ["ini"] }
log = "0.4"
lazy_static = "1.2.0"
nom = "4.1"

[build-dependencies]
embed-resource = "1.1.4"
winres = "0.1.8"

[dev-dependencies]
assert_matches = "1.3"

[profile.release]
lto="fat"
codegen-units=1
opt-level="z"


